# pyopinet

./: .env.example  .gitignore  AGENTS.md  README.md  SKILL.md  opinet-api.md  pyproject.toml
docs/: debug-fixture-workflow.md  implementation-status.md
examples/: streamlit_debug_app.py
opinet/: __init__.py  _convert.py  _http.py  client.py  codes.py  coords.py  exceptions.py  models.py  normalized.py
opinet/experimental/: __init__.py  client.py
src/opinet/: __init__.py  catalog.py  client.py  debug.py  models.py  normalized.py  vworld.py
tests/: conftest.py  runners.py  test_catalog.py  test_client_endpoints.py  test_codes.py  test_convert.py  test_coords.py  test_debug.py  test_experimental.py  test_generated_fixtures.py  test_http.py  test_live_api.py  test_normalized_models.py  test_normalized_records.py  test_pep561_packaging.py  test_vworld_sigungu.py  utils.py
tests/fixtures/: area_code_root.json  area_code_sido_01.json  around_all_gangnam.json  avg_all_price.json  detail_by_id_A0010207.json  empty_oil.json  error_invalid_key.json  error_rate_limit.json  low_top10_B027.json
tests/fixtures/get_area_codes/: area_code_root_schema_only.json
